--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class=" p-5">
 
           <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logo.png" width="25%"  height= "35%" >
+            <img src="img/download.jpg" width="25%"  height= "35%" >
 
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
