--- a/index.html
+++ b/index.html
@@ -69,9 +69,15 @@
                     <img src="img/image.png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>RasinformaticA</h2>
-                    <p class="p-2">A Rasinformática é uma empresa especializada em soluções de tecnologia,
-                         oferecendo serviços como manutenção de equipamentos, redes e suporte técnico. 
+                    <h2>MC Kelvin</h2>
+                    <p class="p-2">MC Kelvin, nome artístico de Kelvin Alves, foi um cantor e compositor de funk carioca.
+                       Nascido no Rio de Janeiro, ele se destacou na cena do funk com letras que retratavam a realidade das favelas. 
+                       Sua carreira, embora curta, foi marcada por sucessos no movimento do funk 150 bpm. MC Kelvin faleceu tragicamente
+                        em 2022, aos 23 anos, deixando um legado importante no gênero.
+
+
+
+
                         </p>
                 </div>
             </div>
