--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <img src="img/images.jpg" class="img-fluid rounded-5" loading="lazy"> <br>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                        <img src="img/download (1).jpg"
                             class="img-fluid rounded-5" loading="lazy"> <br>
                     </div>
                 </div>
