--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/icon.png"
+                        <img src="img/images.jpg"
                             class="img-fluid rounded-5" loading="lazy"> <br>
                     </div>
                     <div class="col-md-4">
