--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/1_mc_kevin-6660996.jpg"
+                        <img src="img/1_mc_kevin-6660996.jpg" width="80"
                             class="img-fluid rounded-5" loading="lazy"> <br>
                     </div>
                     <div class="col-md-4">
