--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="center-conteudo">
-                <a href="RasinformaticA" class="btn btn-primary btn-lg botao-inicio fw-semibold">RasinformaticA</a>
+                <a href="MCkevin" class="btn btn-primary btn-lg botao-inicio fw-semibold">MC Kevin</a>
                 
        
         <p>Contatos</p>
         <i class="bi bi-whatsapp"></i>
         <i class="bi bi-youtube"></i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Rafael®️</p>
+        <p class="mt-3">Desenvolvido por Maria Eduarda Gomes!</p>
     </div>
 </div>
     </section>
