--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <img src="img/image.png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>MC Kelvin</h2>
-                    <p class="p-2">MC Kelvin, nome artístico de Kelvin Alves, foi um cantor e compositor de funk carioca.
+                    <h2>MC Kevin</h2>
+                    <p class="p-2">MC Kelvin, nome artístico de Kevin Alves, foi um cantor e compositor de funk carioca.
                        Nascido no Rio de Janeiro, ele se destacou na cena do funk com letras que retratavam a realidade das favelas. 
                        Sua carreira, embora curta, foi marcada por sucessos no movimento do funk 150 bpm. MC Kelvin faleceu tragicamente
                         em 2022, aos 23 anos, deixando um legado importante no gênero.
@@ -84,7 +84,7 @@
         </section>
 
         <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
-            <h2 class="text-center pt-5">Imagens do MC Kelvin</h2>
+            <h2 class="text-center pt-5">Imagens do MC Kevin</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
                 <div class="row justify-content-md-center">
