--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   ::-webkit-scrollbar-track 
   {
-      background:  #CB6D43;;
+      background:  #435aa5;;
   }
 
   ::-webkit-scrollbar-thumb 
