--- a/index.html
+++ b/index.html
@@ -89,20 +89,20 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/1_mc_kevin-6660996.jpg" width="500" height="400"
+                        <img src="img/1_mc_kevin-6660996.jpg" width="400" height="350"
                             class="img-fluid rounded-5" loading="lazy"> <br>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/images (1).jpg" class="img-fluid rounded-5"
+                        <img src="img/images (1).jpg" width="400" height="350" class="img-fluid rounded-5"
                             loading="lazy"> <br>
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/images.jpg" class="img-fluid rounded-5" loading="lazy"> <br>
+                        <img src="img/images.jpg" width="400" height="350" class="img-fluid rounded-5" loading="lazy"> <br>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/download (1).jpg"
+                        <img src="img/download (1).jpg" width="400" height="350"
                             class="img-fluid rounded-5" loading="lazy"> <br>
                     </div>
                 </div>
