--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="" class="rounded-pill" width="273" height="331" loading="lazy">
+                   
                 </div>
                 <div class="col-5">
                     <h2>MC Kevin</h2>
@@ -109,7 +109,7 @@
              </div>
         </section>
 
-        <section id="contato">
+        <section id="escute as músicas de MC Kevin">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
                     <h2 class="mb-3">Contato</h2>
